--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -22,7 +22,7 @@ $color-white: #f9f8f6;
 $color-text: #2e3a35;
 $color-text-secondary: #6e7c75;
 $color-primary: #3f5e52;
-$color-accent: #e07a3f;
+$color-accent: #DB7337;
 $color-grey: #DDDDDD;
 $color-success: #4f7a63;
 $color-error: #b44e42;
